Sowmika, Vinay | MOBN-562 | Fix beds layout alignment when there are more beds in a row

--- a/ui/app/styles/bedmanagement/_bedmanagement.scss
+++ b/ui/app/styles/bedmanagement/_bedmanagement.scss
@@ -330,6 +330,8 @@
     text-align: center;
     margin-top: 195px;
     position: relative;
+    display: grid;
+    padding-left: 10px;
     .bed-layout-row {
       display: flex;
       place-content: center;
